# learning

./: .gitignore  CMakeLists.txt  README.md
C++/face-detection/: CMakeLists.txt
Python/: 11_文件操作.md  13_异常处理.py  19_菜单选项.py  23_tkinter中显示numpy图像.py  24_tkinter预览摄像头.py  25_faceRecognition.py  5_集合.py  6_推导式.py  8_lambda.py
Python/15_包/: main.py
Python/15_包/package/: __init__.py  m2.py
Python/18_place布局/: main.py
Python/21_记事本/: Notepad.py  main.py
Python/22_套接字/py/: server.py
src/: 10_文件.py  12_面向对象.py  16_tkinter面向对象GUI设计框架.py  17_grid布局.py  1_字符串.py  20_滑块.py  23_tkinter中显示numpy图像.py  2_列表.py  3_元组.py  4_字典.py  7_函数说明文档.py  9_高阶函数.py
src/14_模块/: main.py  module.py
src/15_包/package/: m1.py
src/22_套接字/py/: client.py
src/22_套接字/混合通信/: CMakeLists.txt  README.md  client.py  server.cpp
src/26_face-detection/: CMakeLists.txt  faceDetection.cpp
src/27_md5calc/: CMakeLists.txt  md5calc.c
src/28_姓名学号比对/: (待比对)20级宿舍导入新.xls  (标准)20210401各班最新名单：382人.xls  姓名学号比对.py
src/29_C和Python混编/Python扩展模块编写/: README.md  main.py  md5.c  setup.py
src/29_C和Python混编/Python的C扩展编写/: README.md  md5.c  setup.py
src/29_C和Python混编/动态库调用方式（MD5计算）/: main.py  md5.c  md5.h
src/30_双目相机/: CMakeLists.txt  README.md  chessboard.cpp  collect.cpp  frame.cpp  modeSwitch.sh  monocular-undistortion.cpp
src/31_深度学习/MXNet/: 1_基本入门.py  2_双层神经网络.py
src/31_深度学习/TensorFlow/: 1_单神经元网络.ipynb
src/31_深度学习/TensorFlow/锥桶检测/: .gitattributes  README.md  ckpt-3.data-00000-of-00001  ckpt-3.index  cone-bucket-detection.py  cone-bucket-train.ipynb  cone-bucket.avi  label_map.pbtxt
src/31_深度学习/data/mnist/: mnist-数据集预处理.py
src/31_深度学习/数学基础/: 1-高等数学基础.ipynb  2-微积分.ipynb  4-线性代数基础.ipynb
src/31_深度学习与数据分析/MXNet/: 3_手写数字识别.py  README.md
src/31_深度学习与数据分析/Matplotlib/: 1_绘图风格.ipynb
src/31_深度学习与数据分析/数学基础/: 3-泰勒公式与拉格朗日乘值法.ipynb
